chandeliers-lus/tests/compile_fail/ui/causality/redef-var-ov.rs
chandeliers_lus::decl! {
    node foo() returns (a : bool);
    var a : int;
    let a = 0; tel
}

fn main() {}
